fix layout issues

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .forecast {
   width: 10rem;
   height: 3rem;
-  margin: 2rem auto 0;
+  margin: 1rem auto 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,7 +46,7 @@ body {
   width: 90vw;
   justify-content: center;
   align-content: center;
-  margin: 2rem auto;
+  margin: 0.75rem auto;
   position: relative;
 
   max-width: 450px;
@@ -337,7 +337,7 @@ footer {
   display: grid;
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr 1fr;
-  width: 100%;
+  width: 90vw;
   max-width: 450px;
 
   background: #5f5f5f;
@@ -346,7 +346,7 @@ footer {
   color: #252525;
 
   padding: 0.25rem 0.5rem;
-  margin-bottom: 1rem;
+  margin: 0.75rem auto 1rem;
 }
 
 footer div {
